Fixed issues on Firefox.

--- a/find-me-on/styles.css
+++ b/find-me-on/styles.css
@@ -1,6 +1,7 @@
 body {
   background: #111;
   color: #fff;
+  font-family: 'Roboto', sans-serif;
   margin: 16px 20px;
 }
 
