--- a/pokemon/types-chart/styles.css
+++ b/pokemon/types-chart/styles.css
@@ -1,105 +1,111 @@
 :root {
-        --c-red: #e03030;
-        --c-blue: #3692dc;
-        --c-green: #38bf4b;
-      }
+  --c-red: #e03030;
+  --c-blue: #3692dc;
+  --c-green: #38bf4b;
+}
 
-      body {
-        margin: 0;
-      }
+body {
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+}
 
-      table {
-        font-size: 40px;
-      }
+table {
+  font-size: 40px;
+}
 
-      td {
-        border: 1px solid #0001;
-      }
+td {
+  border: 1px solid #0001;
+}
 
-      td:not(.label) {
-        --size: 40px;
-        height: var(--size);
-        width: var(--size);
-        line-height: var(--size);
+td.vertical {
+  line-height: 0;
+}
 
-        text-align: center;
-      }
+td:not(.vertical):not(.label) {
+  --size: 40px;
+  height: var(--size);
+  width: var(--size);
+  line-height: var(--size);
 
-      footer {
-        padding: 2px 8px;
-      }
+  text-align: center;
+}
 
-      .attack {
-        background: var(--c-red);
-        color: white;
-      }
+footer {
+  padding: 2px 8px;
+}
 
-      .defense {
-        background: var(--c-blue);
-        color: white;
-      }
+.attack {
+  background: var(--c-red);
+  color: white;
+}
 
-      .label .label {
-        font-size: 50%;
-        text-transform: uppercase;
-      }
+.defense {
+  background: var(--c-blue);
+  color: white;
+}
 
-      .label.horizontal {
-        display: flex;
-        justify-content: end;
-      }
+.label .label {
+  font-size: 50%;
+  text-transform: uppercase;
+}
 
-      .label.horizontal .label {
-        padding: 0 8px;
-      }
+.label.horizontal {
+  display: flex;
+  justify-content: end;
+}
 
-      .label.vertical {
-        align-items: center;
-        display: inline-flex;
-        flex-direction: column-reverse;
-        justify-content: end;
-        text-align: center;
-      }
+.label.horizontal .label {
+  padding: 0 8px;
+}
 
-      .label.vertical .label {
-        height: 88px;
-        padding: 8px 0;
-        text-align: left;
-        text-orientation: mixed;
-        transform: rotate(180deg);
-        writing-mode: vertical-rl;
-      }
+.label.vertical {
+  align-items: center;
+  display: inline-flex;
+  flex-direction: column-reverse;
+  height: 100%;
+  justify-content: end;
+  text-align: center;
+}
 
-      .label.centered {
-        justify-content: center;
-      }
+.label.vertical .label {
+  padding: 8px 0;
+  height: 88px;
+  text-align: left;
+  text-orientation: mixed;
+  transform: rotate(180deg);
+  writing-mode: vertical-rl;
+}
 
-      .label .icon {
-        --size: 40px;
-        height: var(--size);
-        width: var(--size);
-        line-height: var(--size);
-        background-size: contain;
-        display: inline-block;
-      }
+.label.centered {
+  justify-content: center;
+}
 
-      .normal-damage::after {
-        content: '·';
-      }
+.label .icon {
+  --size: 40px;
+  height: var(--size);
+  width: var(--size);
+  line-height: var(--size);
+  background-size: contain;
+  display: inline-block;
+}
 
-      .no-damage::after {
-        /* content: '●'; */
-        content: '✖';
-        color: #6f1111;
-      }
+.normal-damage::after {
+  content: '·';
+}
 
-      .half-damage::after {
-        /* content: '◑'; */
-        content: '△';
-        color: var(--c-red);
-      }
+.no-damage::after {
+  /* content: '●'; */
+  content: '✖';
+  color: #6f1111;
+}
 
-      .double-damage::after {
-        content: '◎';
-        color: var(--c-green);
-      }
+.half-damage::after {
+  /* content: '◑'; */
+  content: '△';
+  color: var(--c-red);
+}
+
+.double-damage::after {
+  content: '◎';
+  color: var(--c-green);
+}
